--- a/MyBlog-backend/package.json
+++ b/MyBlog-backend/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mongodb": "^3.2.3",
-    "mongoose": "^5.5.1"
+    "mongoose": "^5.5.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
